[package]
name = "vesting"
version = "0.1.0"
description = "Created with Anchor"
repository = "https://github.com/smartcontractkit/solana-example"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "vesting"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = "0.17.0"
anchor-spl = "0.17.0"
bytemuck = "1.7.2"
arrayref = "0.3.6"
spl-math = { version = "0.1.0",features = [ "no-entrypoint" ] }
spl-token = { version="3.1.1", features = [ "no-entrypoint" ] }
borsh = "0.9"